# midas-journal-702

code/: AdaptiveOtsuThresholdImageFilter2D.cxx  AdaptiveOtsuThresholdImageFilter3D.cxx  CMakeLists.txt  itkAdaptiveOtsuThresholdImageFilter.h
